# controllers/Comment.js
@@ -26,3 +26,14 @@ module.exports.deleteComment = function deleteComment (req, res, next) {
       utils.writeJson(res, response);
     });
 };
+
+module.exports.getComments = function getComments (req, res, next) {
+  var id = req.swagger.params['id'].value;
+  Comment.getComments(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
